main: fixed spacing on main but still need to make responsive

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ body {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 }
+.width-30 {
+    width: 30%;
+}
+.width-70 {
+    width: 70%;
+}
 /* END: Container */
 
 /* START: Navigation for desktop */
@@ -173,12 +179,10 @@ header {
     justify-content: space-around;
     padding: 10px 40px;
     margin-top: 27vh;
-    width: 100%;
     user-select: none;
 }
 .main .main-item {
     display: block;
-    width: 50%;
 }
 .main-item h1 {
     font-size: 5rem;
@@ -226,6 +230,7 @@ header {
     background-position: center;
     border-radius: 25px;
     transition: 0.5s ease-in-out;
+    text-align: center;
 }
 #image:hover {
     transform: scale(1.1);
